# ai-agent-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  plan.md  pyproject.toml  requirements.txt  visualize.py
agent/: graph.py  state.py
agent/.adk/: session.db
agent/tools/: calculator.py  code_executor.py  web_search.py
agent_v2/: agent.py  tools.py
agent_v2/.adk/: session.db
alembic/: env.py
alembic/versions/: 11e88b8c2511_initial.py
ast-trees/: ast_tree  ast_tree1  ast_tree2
core/: config.py  database.py  limiter.py  redis.py  security.py
mcp_server/: server.py
models/: conversation.py
routes/: agent.py  agent_v2.py  auth.py  ws_v2.py
schemas/: agent.py
services/: conversation_service.py  memory_service.py  session_service.py
tests/: test_agent.py  test_routes.py  test_tools.py
