[project]
name = "ai-agent-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.1.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langgraph>=1.0.10",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
